samples/_failures_safe/1761216265_f660ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_766ea6a4.c: In function ‘display_warnings’:
./samples/SAFE/__tmp_766ea6a4.c:130:20: error: missing terminating " character
  130 |             printf("%s %s
      |                    ^~~~~~
./samples/SAFE/__tmp_766ea6a4.c:130:13: error: expected expression at end of input
  130 |             printf("%s %s
      |             ^~~~~~
./samples/SAFE/__tmp_766ea6a4.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_766ea6a4.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_766ea6a4.c:130:13: error: expected declaration or statement at end of input
